recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: reassignment to val
		length = (length/(3*levels))
                       ^